--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@types/node": "^18.0.6",
     "dotenv": "^16.4.7",
-    "node-fetch": "^2.7.0"
+    "express": "^4.21.2",
+    "node-fetch": "^2.7.0",
+    "stripe": "^17.6.0"
   }
 }
